# playground

./: README.md
mongodb/: README.html  README.md  docker-compose.yml
mongodb/init-scripts/: 01-init-databases.js
redis/: README.md  docker-compose.yml
redis/python-cache-demo/: .gitignore  README.md  app.py  postman_collection.json  pyproject.toml  requirements.txt  start_demo.bat  test_performance.py
redis/sample-data/: ecommerce-products.json  sensor-data.json
