[tool.poetry]
name = "python-cache-demo"
version = "0.1.0"
description = "Este projeto demonstra a diferença de performance entre requisições com cache Redis vs requisições diretas à API."
authors = ["lucas-placido <lucas.cplacido@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
redis = "5.0.1"
requests = "2.31.0"
python-multipart = "0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
